--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<title>b-baka!</title>
 </head>
 <p>
-	
+	<img src="http://i.imgur.com/VD2uAzy.jpg" />
 </p>
 <p>
 	I'm not telling you how to add a repository just because you asked, okay? b-baka
