--- a/screenshots/sSaber.html
+++ b/screenshots/sSaber.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Screenshots · WS</title>
+		<title>Screenshots</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0" />
 		<link rel="stylesheet" type="text/css" href="/css/ios7.css" />
@@ -14,16 +14,18 @@
 		<h2>Screenshots</h2>
 		<ul>
 			<li>
+  				<div style="margin-left:auto; margin-right:auto;">
 				<p>
 					<img src="/images/saber/saber.png" />
 				</p>
-					<img src="/images/saber/lancer.png" />
 				<p>
+					<img src="/images/saber/lancer.png" />
 				</p>
+				</div>
 			</li>
 		</ul>
 		<p>
-			© 2013—2014, Jesse Bryan
+			© 2015, hizinfiz
 		</p>
 		<script type="text/javascript" src="/js/ios7.js"></script>
 	</body>
