Updated Saber's depiction

--- a/depictions/Saber.html
+++ b/depictions/Saber.html
@@ -11,6 +11,15 @@
 			<h1></h1>
 		</header>
 		
+		<h2>Version Compatability</h2>
+		<ul>
+			<li>
+				<p>
+					iOS 7.x & 8.x
+				</p>
+			</li>
+		</ul>
+
 		<h2>Description</h2>
 		<ul>
 			<li>
@@ -25,7 +34,7 @@
 				</p>
 			</li>
 			<li>
-				<a href="http://redd.it/2u6wxw"> Original Reddit Post</a>
+				<a href="http://redd.it/2u6wxw"> Saber on Reddit</a>
 			</li>
 		</ul>
 
