Fixed OMAM depiction, added screenshots

--- a/depictions/OMAM.html
+++ b/depictions/OMAM.html
@@ -15,7 +15,10 @@
 		<ul>
 			<li>
 				<p>
-					iOS 7.x & 8.x
+					iOS 7.x (?) & 8.x
+				</p>
+				<p>
+					I can't actually remember if Lock Glyph was available on iOS 7. ¯\_(ツ)_/¯ 
 				</p>
 			</li>
 		</ul>
@@ -24,22 +27,22 @@
 		<ul>
 			<li>
 				<p>
-					_______
+					Of Monsters and Men theme for Lock Glyph. Glyphs for their 3 new singles, <i>Crystals</i>, <i>I of the Storm</i>, and <i>Empire</i>,
+				</p>
+				<p>
+					<strong>Requires Lock Glyph</strong> which can be found on the ModMyi repo.
 				</p>
 
 				</p>
-			</li>
-			<li>
-				<a href="http://redd.it/______"> _____ on Reddit</a>
 			</li>
 		</ul>
 
 		<ul>
 			<li>
-				<a href="/screenshots/screenshots.html">Screenshots</a>
+				<a href="/screenshots/sOMAM.html">Screenshots</a>
 			</li>
 			<li>
-				<a href="/changes/changes.html">Recent Changes</a>
+				<a href="/changes/cOMAM.html">Recent Changes</a>
 			</li>
 		</ul>
 
