I forgot to update the control file and depiction heh

--- a/depictions/OMAM.html
+++ b/depictions/OMAM.html
@@ -10,7 +10,16 @@
 		<header>
 			<h1></h1>
 		</header>
-		
+
+		<h2>In this Update</h2>
+		<ul>
+			<li>
+				<p>
+					Made the lines thicker so it's more visible.
+				</p>
+			</li>
+		</ul>
+
 		<h2>Version Compatability</h2>
 		<ul>
 			<li>
