Made Empire 2 px thick and smaller

--- a/depictions/OMAM.html
+++ b/depictions/OMAM.html
@@ -15,7 +15,7 @@
 		<ul>
 			<li>
 				<p>
-					Made the lines thicker so it's more visible.
+					Made Empire 2 px and slightly smaller thick to match other other two.
 				</p>
 			</li>
 		</ul>
