--- a/changes/cOMAM.html
+++ b/changes/cOMAM.html
@@ -11,6 +11,14 @@
 		<header>
 			<h1></h1>
 		</header>
+		<h2>1.2</h2>
+		<ul>
+			<li>
+				<p>
+					Made Empire 2 px and slightly smaller thick to match other other two.
+				</p>
+			</li>
+		</ul>		
 		<h2>1.1</h2>
 		<ul>
 			<li>
