--- a/depictions/Kingdom.html
+++ b/depictions/Kingdom.html
@@ -10,6 +10,8 @@
 		<header>
 			<h1></h1>
 		</header>
+
+		<img src="../images/kingdom/kingdom.png" style="width: 70%; margin-left: auto; margin-right: auto; display: block;">
 		
 		<h2>Version Compatability</h2>
 		<ul>
@@ -38,9 +40,6 @@
 		</ul>
 
 		<ul>
-			<li>
-				<a href="/screenshots/sKingdom.html">Screenshots</a>
-			</li>
 			<li>
 				<a href="/changes/cKingdom.html">Recent Changes</a>
 			</li>
