--- a/depictions/OMAM.html
+++ b/depictions/OMAM.html
@@ -20,6 +20,10 @@
 			</li>
 		</ul>
 
+		<img src="../images/omam/crystals.png" style="width: 70%; margin-left: auto; margin-right: auto; display: block;">
+		<img src="../images/omam/iofthestorm.png" style="width: 70%; margin-left: auto; margin-right: auto; display: block;">
+		<img src="../images/omam/empire.png" style="width: 70%; margin-left: auto; margin-right: auto; display: block;">
+
 		<h2>Version Compatability</h2>
 		<ul>
 			<li>
