--- a/depictions/TTGL.html
+++ b/depictions/TTGL.html
@@ -11,6 +11,8 @@
 			<h1></h1>
 		</header>
 		
+		<img src="../images/ttgl/ttgl.png" style="width: 70%; margin-left: auto; margin-right: auto; display: block;">
+
 		<h2>Version Compatability</h2>
 		<ul>
 			<li>
@@ -38,9 +40,6 @@
 		</ul>
 
 		<ul>
-			<li>
-				<a href="/screenshots/sTTGL.html">Screenshots</a>
-			</li>
 			<li>
 				<a href="/changes/cTTGL.html">Recent Changes</a>
 			</li>
