--- a/depictions/OMAM.html
+++ b/depictions/OMAM.html
@@ -20,6 +20,7 @@
 			</li>
 		</ul>
 
+		<br>
 		<img src="../images/omam/crystals.png" style="width: 70%; margin-left: auto; margin-right: auto; display: block;">
 		<img src="../images/omam/iofthestorm.png" style="width: 70%; margin-left: auto; margin-right: auto; display: block;">
 		<img src="../images/omam/empire.png" style="width: 70%; margin-left: auto; margin-right: auto; display: block;">
@@ -28,10 +29,7 @@
 		<ul>
 			<li>
 				<p>
-					iOS 7.x (?) & 8.x
-				</p>
-				<p>
-					I can't actually remember if Lock Glyph was available on iOS 7. ¯\_(ツ)_/¯ 
+					iOS 8.x
 				</p>
 			</li>
 		</ul>
@@ -51,9 +49,6 @@
 		</ul>
 
 		<ul>
-			<li>
-				<a href="/screenshots/sOMAM.html">Screenshots</a>
-			</li>
 			<li>
 				<a href="/changes/cOMAM.html">Recent Changes</a>
 			</li>
