--- a/depictions/TTGL.html
+++ b/depictions/TTGL.html
@@ -11,16 +11,14 @@
 			<h1></h1>
 		</header>
 		
+		<br>
 		<img src="../images/ttgl/ttgl.png" style="width: 70%; margin-left: auto; margin-right: auto; display: block;">
 
 		<h2>Version Compatability</h2>
 		<ul>
 			<li>
 				<p>
-					iOS 7.x (?) & 8.x
-				</p>
-				<p>
-					I can't actually remember if Lock Glyph was available on iOS 7. ¯\_(ツ)_/¯ 
+					iOS 8.x
 				</p>
 			</li>
 		</ul>
