--- a/changes/cOMAM.html
+++ b/changes/cOMAM.html
@@ -11,6 +11,14 @@
 		<header>
 			<h1></h1>
 		</header>
+		<h2>1.3</h2>
+		<ul>
+			<li>
+				<p>
+					Update depiction. Theme itself has not changed.
+				</p>
+			</li>
+		</ul>
 		<h2>1.2</h2>
 		<ul>
 			<li>
