Fixing depictions again

--- a/depictions/CataracsCC.html
+++ b/depictions/CataracsCC.html
@@ -30,7 +30,8 @@
 					Works best when used with Cataracs which can be found on repo.winneon.moe
 				</p>
 				<p>
-					<strong>Cataracs Custom Cover requires Custom Cover</strong> which can be found on the ModMyi repo
+					<strong>Cataracs Custom Cover requires Custom Cover</strong> which can be found on the ModMyi repo.
+				</p>
 			</li>
 			<li>
 				<a href="http://redd.it/2fbj5c">Cataracs Custom Cover on Reddit</a>
