Added more gifs for protosphere <3

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
+<html>
 <head>
 	<title>b-baka!</title>
 </head>
-<p>
-	<img src="http://i.imgur.com/VD2uAzy.jpg" />
-</p>
+	<img src="http://i.imgur.com/i1E4Vhm.gif" style="margin-left: auto; margin-right: auto; display: block;">
 <p>
 	I'm not telling you how to add a repository just because you asked, okay? b-baka
 </p>
@@ -16,3 +16,5 @@
 	<li>???</li>
 	<li>Profit</li>
 </ol>
+<img src="http://i.imgur.com/8Sf8kNI.gif" style="margin-left: auto; margin-right: auto; display: block;">
+</html>
