--- a/depictions/Binary.html
+++ b/depictions/Binary.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Thing</title>
+		<title>Binary</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0" />
 		<link rel="stylesheet" type="text/css" href="../css/ios7.css" />
