Adding Binary Keypad

--- a/depictions/Binary.html
+++ b/depictions/Binary.html
@@ -31,7 +31,7 @@
 				</p>
 			</li>
 			<li>
-				<a href="http://redd.it/______"> Binary Keypad on Reddit</a>
+				<a href="http://redd.it/37nl52"> Binary Keypad on Reddit</a>
 			</li>
 		</ul>
 
