--- a/screenshots/sBinary.html
+++ b/screenshots/sBinary.html
@@ -16,7 +16,7 @@
 			<li>
   				<div style="margin-left:auto; margin-right:auto;">
 				<p>
-					<img src="/images/______/____.png" />
+					<img src="/images/binary/binary.png" />
 				</p>
 				</div>
 			</li>
