Fixed Nagato depiction

--- a/changes/cNagato.html
+++ b/changes/cNagato.html
@@ -11,6 +11,22 @@
 		<header>
 			<h1></h1>
 		</header>
+		<h2>1.02</h2>
+		<ul>
+			<li>
+				<p>
+					Fixed depiction
+				</p>
+			</li>
+		</ul>
+		<h2>1.01</h2>
+		<ul>
+			<li>
+				<p>
+					Fixed placement of Wallpaper.html
+				</p>
+			</li>
+		</ul>
 		<h2>1.0</h2>
 		<ul>
 			<li>
