--- a/depictions/Nagato.html
+++ b/depictions/Nagato.html
@@ -46,10 +46,10 @@
 
 		<ul>
 			<li>
-				<a href="/screenshots/screenshots.html">Screenshots</a>
+				<a href="/screenshots/sNagato.html">Screenshots</a>
 			</li>
 			<li>
-				<a href="/changes/changes.html">Recent Changes</a>
+				<a href="/changes/cNagato.html">Recent Changes</a>
 			</li>
 		</ul>
 
