Oops, forgot to remove the battery images

--- a/changes/cNagato.html
+++ b/changes/cNagato.html
@@ -11,6 +11,14 @@
 		<header>
 			<h1></h1>
 		</header>
+		<h2>1.03</h2>
+		<ul>
+			<li>
+				<p>
+					Remove battery images
+				</p>
+			</li>
+		</ul>
 		<h2>1.02</h2>
 		<ul>
 			<li>
