--- a/screenshots/sNagato.html
+++ b/screenshots/sNagato.html
@@ -14,9 +14,9 @@
 		<h2>Screenshots</h2>
 		<ul>
 			<li>
-  				<div style="margin-left:auto; margin-right:auto;">
-					<img src="/images/nagato/ls.png" />
-					<img src="/images/nagato/sbhtml.png" />
+  				<div>
+					<img style="margin-left:auto; margin-right:auto;" src="/images/nagato/ls.png" />
+					<img style="margin-left:auto; margin-right:auto;" src="/images/nagato/sbhtml.png" />
 				</div>
 			</li>
 		</ul>
