--- a/changes/cNagato.html
+++ b/changes/cNagato.html
@@ -4,13 +4,24 @@
 		<title>Recent Changes</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0" />
-		<link rel="stylesheet" type="text/css" href="/css/ios7.css" />
+		<link rel="stylesheet" type="text/css" href="../css/ios7.css" />
 		<script type="text/javascript" src="/js/jquery-2.1.0.min.js"></script>
 	</head>
 	<body>
 		<header>
 			<h1></h1>
 		</header>
+		<h2>1.1</h2>
+		<ul>
+			<li>
+				<p><strong>iPad support!</strong></p>
+				<p>Fixed battery display. It will now properly change colors based on critical, normal, and full.</p>
+				<p>Fixed a bug with yesterday's date being highlighted when the day changes.</p> 
+				<p>Moved all settings to Config.js, you can now customize the colors and other locales in the tweak settings.</p>
+				<p>Added some spacing between the time and city so it looks less crowded.</p>
+				<p>New screenshots! Big thanks to <a href="http://www.reddit.com/u/ReadyBasher01">/u/ReadyBasher01</a> and <a href="http://twitter.com/V3RSAC3THUG">@V3RSAC3THUG</a></p>
+			</li>
+		</ul>
 		<h2>1.03</h2>
 		<ul>
 			<li>
