--- a/changes/cBinary.html
+++ b/changes/cBinary.html
@@ -11,6 +11,14 @@
 		<header>
 			<h1></h1>
 		</header>
+		<h2>1.2</h2>
+		<ul>
+			<li>
+				<p>
+					Added lockscreen and phone only options by request.
+				</p>
+			</li>
+		</ul>
 		<h2>1.1</h2>
 		<ul>
 			<li>
