Lock Glyph Requests 1.0

--- a/changes/cRequests.html
+++ b/changes/cRequests.html
@@ -11,19 +11,11 @@
 		<header>
 			<h1></h1>
 		</header>
-		<h2>b0.2</h2>
+		<h2>1.0</h2>
 		<ul>
 			<li>
 				<p>
-					Fixed some stock icons and gradients. 109 new themed apps, 16 new alternate icons.
-				</p>
-			</li>
-		</ul>
-		<h2>b0.1</h2>
-		<ul>
-			<li>
-				<p>
-					Initial Release. Stock Icons + Cydia + 16 Alernates completed.
+					The Maine (band) Lock Glyph.
 				</p>
 			</li>
 		</ul>
