Derp forgot to update version number. Mugi b0.3.01

--- a/changes/cMugi.html
+++ b/changes/cMugi.html
@@ -11,6 +11,14 @@
 		<header>
 			<h1></h1>
 		</header>
+		<h2>b0.3.01</h2>
+		<ul>
+			<li>
+				<p>
+					Fixed an issue with .DS_Store.
+				</p>
+			</li>
+		</ul>
 		<h2>b0.3</h2>
 		<ul>
 			<li>
